refactor: setAllowedOriginPatterns 수정